Fix T78592: Shear operator fails to affect curve control point handles

Use `td->iloc` as the coordinates of the transformed element.

It is more accurate and other transformation modes, such as scale, also
operate on `td->iloc`.